Thu Oct  5 16:43:59 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added omindexer.cc

Thu Oct  5 15:57:30 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed some #includes.

Thu Oct  5 14:32:59 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Split indexer interface into several header files in include/om.

	* Hid the internal details in Internal objects.

	* Moved autoptr.h into include/om as AutoPtr is in the indexing
	  interface.

Thu Oct 05 13:30:49 BST 2000 Olly Betts

	* OmPostListIterator: added get_doclength() and get_wdf() methods;
	  fixed reversed conditional that stopped OmPostListIterator-s from
	  working and added regression test.

	* delve: extra info can be output for postlists and termlists (-v);
	  can output one list per line or one item per line (-1); can take
	  several database(s).

Wed Oct 04 18:20:12 BST 2000 Olly Betts

	* Merged branch_newmatcher back into HEAD - branch ChangeLog
	  entries were:

===============================================================================

Wed Oct 04 17:24:26 BST 2000 Olly Betts

	* Added ExtraWeightPostList - weights from MSetPostList no longer get
	  extra weight applied twice.

	* SingleMatch no longer used so removed; SubMatch moved to match.h;
	  SubMatch::mk_weight() moved to LocalSubMatch().

Wed Oct 04 15:36:09 BST 2000 Olly Betts

	* Removed references to multi backend since it no longer exists.

Wed Oct 04 14:53:28 BST 2000 Olly Betts

	* Removed PostList::set_matcher().

Wed Oct 04 13:15:04 BST 2000 Olly Betts

	* Eliminated internal friends from external headers.

	* Fixed two more compiler warnings.
 
Wed Oct 04 11:43:19 BST 2000 Olly Betts

	* stats.h: Removed unneeded bodge.

	* Fixed two compiler warnings.

Tue Oct 03 18:32:35 BST 2000 Olly Betts

	* Merged LocalMatch into MultiMatch.

Tue Oct 03 17:04:17 BST 2000 Olly Betts

	* Now passes all tests.

Mon Oct 02 18:00:20 BST 2000 Olly Betts

	* Cleaned up a bit.
